force-app/main/default/objects/InteractionAttendee/fields/Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Aggregator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Aggregator that would be part of interaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aggregator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>