force-app/main/default/objects/InteractionAttendee/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Twilio</complianceGroup>
    <description>3rd Party&apos;s name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Attendee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>