force-app/main/default/objects/InteractionAttendee/fields/Attendee_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_Formula__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>A formula field to determine Attendee name when Attendee Type is &quot;Internal&quot; or &quot;Customer&quot; or &quot;External&quot; or &quot;Virtual Agent&quot;</description>
    <formula>IF(ISPICKVAL( AttendeeType , &apos;Internal&apos;), User.FirstName &amp; &quot; &quot; &amp; User.LastName , IF( OR(ISPICKVAL( AttendeeType , &apos;External&apos;),ISPICKVAL( AttendeeType , &apos;VirtualAgent&apos;)) , Attendee_Name__c, IF(ISPICKVAL( AttendeeType , &apos;Customer&apos;), Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName, &apos;&apos;) ) )</formula>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>