force-app/main/default/objects/InteractionAttendee/fields/Attendee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Phone__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Twilio</complianceGroup>
    <description>3rd Party&apos;s phone number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Attendee Phone</label>
    <type>Phone</type>
</CustomField>