force-app/main/default/objects/InteractionAttendee/fields/Attendee_SubType__c.field-meta.xml
<CustomField>
    <fullName>Attendee_SubType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Subtype of the attendee</description>
    <label>Attendee SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AttendeeType</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RBM</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>