force-app/main/default/objects/InteractionAttendee/fields/Conversation_Sid__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Sid__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Holds conversation sid against each Interaction attendee when in conference call</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Conversation Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>