force-app/main/default/objects/InteractionAttendee/fields/Formula_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Attendee_Name__c</fullName>
    <formula>IF(ISPICKVAL( AttendeeType , &apos;Internal&apos;), User.FirstName &amp; &quot; &quot; &amp; User.LastName , 
IF(AND (ISPICKVAL( AttendeeType , &apos;External&apos;), NOT(ISPICKVAL( Attendee_SubType__c  , &apos;Broker&apos;))), Attendee_Name__c, IF(ISPICKVAL( AttendeeType , &apos;External&apos;), Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName, &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>