force-app/main/default/objects/InteractionAttendee/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the User Role</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>