force-app/main/default/objects/InteractionAttendee/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Time Interaction Attendee was added</description>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>