force-app/main/default/objects/InteractionAttendee/fields/UniqueKeyForInteractionAttendee__c.field-meta.xml
<CustomField>
    <fullName>UniqueKeyForInteractionAttendee__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Twilio</complianceGroup>
    <description>This field is used to restrict creation of duplicate Interaction Attendee record</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>UniqueKeyForInteractionAttendee</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>