force-app/main/default/objects/InteractionAttendee/validationRules/Allow_Only_Internal_Or_External_Attendee.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Only_Internal_Or_External_Attendee</fullName>
    <active>true</active>
    <description>Prevents creating an Interaction Attendee record when Attendee Type other than &apos;Internal&apos; or &apos;External&apos; for RBM Interaction.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    NOT(
        ISPICKVAL(AttendeeType, &apos;Internal&apos;) || ISPICKVAL(AttendeeType, &apos;External&apos;)
    ),
    Interaction.RecordType.DeveloperName = &quot;RBM_Broker_Interaction&quot;
)</errorConditionFormula>
    <errorDisplayField>AttendeeType</errorDisplayField>
    <errorMessage>Attendee type must be either &apos;Internal&apos; or &apos;External&apos; for RBM interactions.</errorMessage>
</ValidationRule>