force-app/main/default/objects/InteractionAttendee/validationRules/Make_Attendee_Phone_Non_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Attendee_Phone_Non_Editable</fullName>
    <active>true</active>
    <description>If value is available, validation on Attendee Phone that user cannot update the record</description>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,ISCHANGED(Attendee_Phone__c),  NOT(ISBLANK(PRIORVALUE(Attendee_Phone__c))))</errorConditionFormula>
    <errorDisplayField>Attendee_Phone__c</errorDisplayField>
    <errorMessage>You cannot edit Attendee Phone</errorMessage>
</ValidationRule>