force-app/main/default/objects/InteractionAttendee/validationRules/Make_AttendeeType_Non_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_AttendeeType_Non_Editable</fullName>
    <active>true</active>
    <description>AttendeeType should not update on Chat/Store record types</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
  OR(Interaction.Record_Type__c  = &apos;Message&apos;, Interaction.Record_Type__c  = &apos;In Person&apos;),
 ISPICKVAL( AttendeeType ,&apos;Customer&apos;) 
)</errorConditionFormula>
    <errorMessage>You cannot update Attendee type to &apos;Customer&apos; for Message/In Person record types</errorMessage>
</ValidationRule>