force-app/main/default/objects/InteractionAttendee/validationRules/Prevent_Using_Duplicate_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Using_Duplicate_Contact</fullName>
    <active>true</active>
    <description>Prevent Using the Duplicate Contact/Broker while creating the Interaction Attendee Records.</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
OR(
INCLUDES( Contact.Sync_Status__c,&apos;Duplicate - Email&apos;),
INCLUDES( Contact.Sync_Status__c ,&apos;Duplicate - OCV Id&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Duplicate Broker is Selected, please add another contact</errorMessage>
</ValidationRule>